# hack-nation-project

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  domain.py  enums.py
backend/app/routers/: jobs.py  provider_calls.py  providers.py  quotes.py
backend/app/schemas/: details.py  intakes.py  jobs.py  negotiations.py  provider_calls.py  providers.py  quotes.py  recommendations.py  shared.py  specifications.py
backend/app/services/: __init__.py  ai_providers.py  details.py  intakes.py  jobs.py  negotiations.py  provider_calls.py  providers.py  quotes.py  recommendations.py  specification_extraction.py  specifications.py
backend/tests/: conftest.py  test_ai_extraction.py  test_health.py  test_intakes.py  test_jobs.py  test_negotiations.py  test_provider_calls.py  test_providers.py  test_quotes.py  test_recommendations.py  test_specifications.py
docs/: BACKEND_SETUP.md  GETTING_STARTED.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
frontend/src/api/: adapters.ts  types.ts
frontend/src/components/: AgentPanel.tsx  AgentPerformance.tsx  AppShell.tsx  BackToHome.tsx  CallBoard.tsx  CallQuoteTable.tsx  CloseDesk.tsx  ConversationContract.tsx  ErrorBoundary.tsx  FactRow.tsx  IntakeWorkspace.tsx  Logo3D.tsx  PhaseRail.tsx  PhotoInventoryCapture.tsx  PriceLadder.tsx  (+4 more)
(+28 files in other folders)
